clusters/talos-cluster/janus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: janus-service
  namespace: janus
spec:
  selector:
    app: janus
  ports:
    - name: http
      port: 80
      targetPort: 3000
